[package]
name = "ftp_stream_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suppaftp = { version = "6.0.7", features = ["async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io", "compat"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
futures = "0.3.21"
